# python-italia-telegram-bot

./: .gitignore  mybot.py  pyproject.toml
tgtrio/: __init__.py  __main__.py  _commands.py  _loop.py  _settings.py  _tgapi.py  activity_monitor.py  flood_control.py
