[tool.poetry]
name = "tgtrio"
version = "0.1.0"
description = ""
authors = ["Davide Rizzo <sorcio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
trio = "~0.11"
asks = "^2.3"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-trio = "^0.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
